--- a/src/Statistic/Statistic.css
+++ b/src/Statistic/Statistic.css
@@ -1,5 +1,5 @@
 .stats__container {
-  margin: 20px 0 0 20px;
+  margin: 20px 0 20px 20px;
   display: inline-block;
   outline: 1px solid gray;
   box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.3);
